--- a/ConexionHTTP/Info.plist
+++ b/ConexionHTTP/Info.plist
@@ -53,5 +53,11 @@
         </dict>
     </dict>
     
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+    
 </dict>
 </plist>
